# ChangeLog for media-libs/xine-lib
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.194 2005/02/17 18:12:45 corsair Exp $

  17 Feb 2005; Markus Rothe <corsair@gentoo.org> xine-lib-1.0.ebuild:
  Stable on ppc64

  08 Feb 2005; Chris White <chriswhite@gentoo.org> xine-lib-1.0.ebuild:
  Fixed bug #76090 (aalib and libcaca hard links).

  08 Feb 2005; Chris White <chriswhite@gentoo.org> xine-lib-1.0.ebuild,
  xine-lib-1_rc6-r1.ebuild, xine-lib-1_rc8-r1.ebuild:
  Removing symbol stripping as it appears to be the cause of a few ffmpeg
  related packages crashing.

  15 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> xine-lib-1.0.ebuild,
  xine-lib-1_rc6-r1.ebuild, xine-lib-1_rc8-r1.ebuild:
  changed X dependency to virtual/x11. fixes bug #78046.

*xine-lib-1_rc8-r1 (07 Jan 2005)

  07 Jan 2005; Chris White <chriswhite@gentoo.org> xine-lib-1_rc8-r1.ebuild:
  xv support is patched in xine-lib, and it no longer requires the use flag.
  Removing that as well as the logic, as the logic breaks stuff.

  06 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -xine-lib-1_rc5-r3.ebuild, -xine-lib-1_rc6.ebuild, -xine-lib-1_rc7.ebuild,
  -xine-lib-1_rc8.ebuild:
  Purging insecure versions from the tree.

  05 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  xine-lib-1_rc6-r1.ebuild:
  Stable sparc for security fix.

*xine-lib-1_rc8 (05 Jan 2005)

  05 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  xine-lib-1.0.ebuild, +xine-lib-1_rc6-r1.ebuild, xine-lib-1_rc6.ebuild,
  xine-lib-1_rc7.ebuild, xine-lib-1_rc8.ebuild:
  Add security fix to a 1_rc6 release dor sparc since we're having problems on
  later versions. Not stable as I haven't been able to test it yet. Removed
  IUSE=pic for conditionally applying the pic fix as it should always be
  applied.
