@@ -1,10 +1,16 @@
-MD5 96cefc8c189c5e19d2766cc4d3bbaa47 ChangeLog 1868
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 6c9f934a599b4c14314df868735a2ab6 ChangeLog 2004
 MD5 af08cabbae4b191018ca153392a86bea metadata.xml 304
-MD5 60f92c0bf2f960ee5fe72cfd8b60e60b xine-lib-1_rc8-r1.ebuild 5688
-MD5 3f7e60d5802390c9fcbf5661402f9d81 xine-lib-1.0.ebuild 8187
+MD5 bafa76f43340d578c810b14dccbd7075 xine-lib-1.0.ebuild 8478
 MD5 b6ad8f25595f1c8e8495579462e42764 xine-lib-1_rc6-r1.ebuild 5656
+MD5 60f92c0bf2f960ee5fe72cfd8b60e60b xine-lib-1_rc8-r1.ebuild 5688
 MD5 bcd5f2b8999f92c2f7215009f5ae1490 files/configure-64bit-define.patch 221
+MD5 1780c88522c9a26856effa70a0e27b50 files/digest-xine-lib-1.0 65
 MD5 082b3ed1c96543704d604199047b1dee files/digest-xine-lib-1_rc6-r1 68
+MD5 98bc17778384589bba027ff136956fec files/digest-xine-lib-1_rc8-r1 67
+MD5 54088d42a9e9980285a96b7e2cce19cf files/djb_demux_aiff.patch 559
 MD5 5e99bec89f5cc4f0d00bcd61430d67cb files/protect-CFLAGS.patch-1_rc2 597
 MD5 060bcd1d4a4ffa427139a7f188272e01 files/protect-CFLAGS.patch-1_rc3 597
 MD5 060bcd1d4a4ffa427139a7f188272e01 files/protect-CFLAGS.patch-1_rc4 597
@@ -20,20 +26,24 @@ MD5 c666fb35b00138d90890fef3d56548f2 files/xine-lib-1_rc6-configure-sparc.patch 
 MD5 a11a93cf97cecb7c1c2b24e11a5419ae files/xine-lib-1_rc6-ffmpeg.patch 1279
 MD5 b3b75486422c6ccab706f2ff4cf7c4eb files/xine-lib-1_rc6-mmx.patch 391
 MD5 bf2bb27a1f0433ea77571175f2b59885 files/xine-lib-1_rc6-pic.patch 2655
+MD5 a52bac7d568413597e0c7932b164e58c files/xine-lib-1_rc7-2.6.patch 594
+MD5 c666fb35b00138d90890fef3d56548f2 files/xine-lib-1_rc7-configure-sparc.patch 587
+MD5 b3b75486422c6ccab706f2ff4cf7c4eb files/xine-lib-1_rc7-mmx.patch 391
+MD5 bf2bb27a1f0433ea77571175f2b59885 files/xine-lib-1_rc7-pic.patch 2655
 MD5 5ddf5d90566965b047828407dcc0f5d1 files/xine-lib-1rc4-libtool1.5.6.shrext_cmds.patch 331
 MD5 a52bac7d568413597e0c7932b164e58c files/xine-lib-2.6.patch 594
 MD5 0cf698a9ff87a3595140d92df7b900b6 files/xine-lib-configure.patch 342
 MD5 aa54582a91933533008c1211dcbcfb35 files/xine-lib-disable-directfb.patch 4169
 MD5 3cbdef8aa211184b96474addb4f7c5d6 files/xine-lib-gcc34.patch 423
-MD5 dcb0c79c0bb106397aad42f6d936627d files/xineconfig.patch-0.9.13 601
-MD5 a52bac7d568413597e0c7932b164e58c files/xine-lib-1_rc7-2.6.patch 594
-MD5 c666fb35b00138d90890fef3d56548f2 files/xine-lib-1_rc7-configure-sparc.patch 587
-MD5 b3b75486422c6ccab706f2ff4cf7c4eb files/xine-lib-1_rc7-mmx.patch 391
-MD5 bf2bb27a1f0433ea77571175f2b59885 files/xine-lib-1_rc7-pic.patch 2655
-MD5 98bc17778384589bba027ff136956fec files/digest-xine-lib-1_rc8-r1 67
-MD5 54088d42a9e9980285a96b7e2cce19cf files/djb_demux_aiff.patch 559
 MD5 5d2c3c00bf3ae9a89dfcaa8b5c5b17a2 files/xine-lib-x11.patch 703
-MD5 1780c88522c9a26856effa70a0e27b50 files/digest-xine-lib-1.0 65
+MD5 dcb0c79c0bb106397aad42f6d936627d files/xineconfig.patch-0.9.13 601
 MD5 ddf48f1eb00a6985b6fba5fff9386ad0 files/xine-lib-hardened-mmx.patch 2558
-MD5 3704271d4339b919569b4ea416a4c34e files/xine-lib-1_rc8-configure.ac.patch 2825
 MD5 d8f3138ae2260f7c98bf46ae7159be11 files/xine-lib-configure.ac.patch 926
+MD5 3704271d4339b919569b4ea416a4c34e files/xine-lib-1_rc8-configure.ac.patch 2825
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.2.6 (GNU/Linux)
+
+iD8DBQFCIzqLFdQwWVoAgN4RAnKFAJ4ifziCoKW7wN1PUv0EHKhWW06W9gCgj5w7
+/OiKoWbbQ1ZPrYnDp7Q2onA=
+=qQbc
+-----END PGP SIGNATURE-----
