@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.194 2005/02/17 18:12:45 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.195 2005/02/28 15:52:45 chriswhite Exp $
+
+  01 Mar 2005; Chris White <chriswhite@gentoo.org> xine-lib-1.0.ebuild:
+  Fixed bug #82571.  Also added in external ffmpeg support.
 
   17 Feb 2005; Markus Rothe <corsair@gentoo.org> xine-lib-1.0.ebuild:
   Stable on ppc64
